# machina

./: .dockerignore  .env.production  .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.web  README.md  app.config.ts  bacon.toml  biome.jsonc  flake.nix  justfile  mprocs.yaml  next.config.js  openapitools-rust-options.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tailwind.config.js  tsconfig.json  turbo.json
.github/workflows/: base-publish.yaml  checks.yaml  publish-api-dev.yaml  publish-api-production.yaml  publish-api.yaml  publish-auth-dev.yaml  publish-dev.yaml  publish-prod.yaml  publish-web-dev.yaml  publish-web-production.yaml  publish-web.yaml
.sqlx/: query-5ce65af61621fcb248e1c6667be1a33c1901edeae0eb6fc675666aa9eca0f81e.json  query-8368fc7e7add7ee9e355ae44dec5f61093686bf34534021b2f62e7a8b3ce1205.json  query-8a44f095597d2e69663f0feda7b7ab4149c12647f1025bb410d4a47c1905de3b.json  query-f1c0928ad24887bd0bc928b1f501f27fca429cbe54640ba4c9cce454ae1f4248.json
apps/api/: Cargo.toml  Dockerfile  Dockerfile.api  package.json
apps/api/.sqlx/: query-107cf8507bcba115e1e0850ca991ad53a3a24a829b533acfc6bbfe1d6163a7e3.json  query-153cf302fdb99b87387e1da0d6ac5a771b0fe44e13310ed1612bab85929289de.json  query-16a605ea0b6b24e5eb3be3935ffebeff46a45a2e397154dc964a4f433efbcb79.json  query-16b34bd950f7b303b3972d5d08941c955961fd6a618657f3f6015a1df71e400e.json  query-1a1405472afbf0d1df7f0e83e88b42955511801ba982756cbd9ddc8b6041ceac.json  query-32e9c89399c151735e67879cf09f624f852655ee21f49f6ab8c1d24f012271a3.json  query-3fda5a3f0dd168651dce189251422b2c626c9af69ab62cedb9e09092cf29ef50.json  query-4e50c7cc9b77d9c1da47af5afdc0095eca3d33c09da46ceca81340de916b6ad4.json  query-648372e3809137975344204ccbc4bf6a826f7df50bd0f8b90154a629edbf25c2.json  query-6956baafe60dae30e7860d5c84c495612c5dfbb1fdda170ad8ef51ce88bcfd7b.json  query-82e50a6ad3062563c2201c1c92f93f774446bed6401ea873754964c75cf5a655.json  query-920bf40ff284cbe39334193fd8b51fd6942dddf048f5e93626374ad940a6d554.json  query-9716ff6b8a83a0313019d1713ac2ea9032e82b2de735f1dc0e545a99534457f4.json  query-ee7425a84d92b088fe94c38c35ead40d82a2cb8aee6ce1392d6742a0941b506f.json
apps/api/query/: get-db-totals.sql  get-listening-history.sql  get-profile.sql  get-top-artists.sql  get-top-tracks.sql  get-total-listen-minutes.sql  get-total-plays.sql  get-user-spotify-tokens.sql  get-users.sql  profile-overview.sql  update-spotify-token.sql
apps/api/src/: auth.rs  cache_manager.rs  config.rs  main.rs  metrics.rs  models.rs  openapi.rs  preview.rs  spotify.rs  sync.rs  utils.rs
apps/api/src/database/tables/: user.rs
apps/api/src/embeds/: cache_manager.rs  mod.rs  preview.rs  spotify_embed.rs
apps/api/src/routes/: mod.rs  profile.rs
apps/auth/: Dockerfile  package.json  tsconfig.json
apps/auth/dev/: openapi-schema.ts
apps/auth/src/: auth.ts  env.ts  index.ts  utils.ts
apps/web/: Dockerfile  app.config.ts  package.json  tailwind.config.ts  tsconfig.json  ui.config.json  vite.config.ts
apps/web/nix/: default.nix
apps/web/scripts/: openapi-ts.ts
apps/web/src/: app.css  app.tsx  client.tsx  entry-client.tsx  entry-server.tsx  env-client.ts  env-server.ts  routeTree.gen.ts  router.tsx  server.tsx  ssr.tsx
apps/web/src/api/: index.ts
apps/web/src/hooks/: use-in-view.ts  (+1 more)
apps/website/: Dockerfile  app.config.ts  package.json  tailwind.config.ts  tsconfig.json  ui.config.json
apps/website/src/: app.css  entry-server.tsx  env.ts
og/: get-track-data.ts  package.json  tsconfig.json  vite.config.ts
pages/: [...slug].tsx  dan.tsx  index.tsx
pages/api/: og.tsx
pages/direct/: [...slug].tsx
patches/: @tanstack__solid-query-devtools.patch  better-auth.patch
prisma/: schema.prisma
prisma/migrations/20250105153942_testing_with_other_field/: migration.sql
prisma/migrations/20250105164333_add_track_and_listens/: migration.sql
prisma/migrations/20250105194937_add_spotify_token_inforamtion/: migration.sql
prisma/migrations/20250303200447_add_more_data_for_tracks/: migration.sql
prisma/migrations/20250303213316_add_user_id_for_listens/: migration.sql
prisma/migrations/20250303213338_remove_default/: migration.sql
query/: get-listening-hist-dan.sql  spotify-callback-user-insert.sql  update-spotify-token.sql
src/: app.css  app.tsx  entry-server.tsx  env.ts
src/components/: listen-item.tsx
src/routes/: [...slug].tsx  dan.tsx  dev.tsx  index.tsx
src/routes/api/: og.ts
src/routes/direct/: [...slug].tsx
src/utils/: get-track-data.ts  index.tsx
video/: main.rs  spotify.rs  sync.rs
(+134 files in other folders)
