[[bin]]
name = "machina-video"
path = "video/main.rs"

[package]
name = "machina"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
axum-macros = "0.4.2"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
