[[bin]]
name = "machina-api"
path = "src/main.rs"

[package]
name = "machina"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
cuid = "1.3.3"
futures = "0.3.31"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
rspotify = "0.14.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "chrono",
    "macros",
    "derive",
] }
once_cell = "1.21.1"
thiserror = "2.0.12"
envconfig = "0.11.0"
