[[bin]]
name = "machina-api"
path = "src/main.rs"

[package]
name = "machina"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "query"] }
axum-macros = "0.5.0"
cuid = "1.3.3"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json", "stream", "cookies"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
rspotify = "0.15.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "chrono",
    "macros",
    "derive",
    "bigdecimal",
] }
once_cell = "1.21.3"
thiserror = "2.0.12"
envconfig = "0.11.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
# backblaze-b2-client = "0.1.6"
backblaze-b2-client = { git = "https://github.com/iAverages/backblaze-b2-client-rs" }
bytes = "1.10.1"
tokio-stream = "0.1.17"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
axum-tracing-opentelemetry = "0.29.0"
init-tracing-opentelemetry = { version = "0.30.0", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
sea-query = { version = "0.32.6", features = ["backend-mysql"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-mysql"] }
auth-api-client = { path = "../../packages/auth-api-client/" }
prometheus = "0.14.0"
lazy_static = "1.5.0"
